common-applications/test-environment/community-talent-certification-it-system/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: community-talent-certification-it-system
spec:
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      imagePullSecrets:
      - name: huawei-swr-image-pull-secret
      nodeSelector:
        autoscaler: "true"
      containers:
      - name: website
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/infra-common/community-talent-certification-test:ff431c51760cbf1a7b5a92cc11c2223312f550b6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 500m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
