common-applications/test-environment/community-talent-certification-it-system/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: community-talent-certification-it-system
spec:
  ports:
  - name: https-port
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: website
  type: ClusterIP
