common-applications/test-environment/community-talent-certification-it-system/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: website-ingress
  namespace: community-talent-certification-it-system
spec:
  tls:
    - hosts:
      - talent-assessment.test.osinfra.cn
      secretName: website-tls
  rules:
    - host: talent-assessment.test.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: website-service
            servicePort: 8080
          path: /
